--- a/006-cellular-automata/style.css
+++ b/006-cellular-automata/style.css
@@ -4,14 +4,33 @@
     float       : left;
     margin-left : 80px;
     margin-right : 80px;
-    background-color : coral;
-    display : table;
+    background-color : #557788;
+    display: grid;
 }
 
-#pen_button_div
+#play_button
 {
-    margin-top    : 10px;
-    margin-bottom : 10px;
+    width : 160px;
+    height : 160px;
+    border-radius: 50%;
+    color : #2222CC;
+    background-color : #CCFFCC;
+    border-color : #113311;
+    border-width : 10px;
+    margin-left : auto;
+    margin-right : auto;
+    grid-column-start : 1;
+    grid-column-end   : 3;
+    grid-row-start : 1;
+    grid-row-end   : 1;
+}
+
+#slider_div
+{
+    grid-column-start : 1;
+    grid-column-end   : 3;
+    grid-row-start : 2;
+    grid-row-end   : 2;
 }
 
 .slider
@@ -19,21 +38,49 @@
     width : 80%;
 }
 
-#slider_div
+
+#pen_button_div
 {
-    display : table-row;
-    padding : 100px;
+    margin-top    : 10px;
+    margin-bottom : 10px;
+    grid-column-start : 1;
+    grid-column-end   : 3;
+    grid-row-start : 3;
+    grid-row-end   : 3;
+    grid-row-start : 3;
+    grid-row-end   : 3;
+}
+
+#fill_button_div
+{
+    margin-top    : 10px;
+    margin-bottom : 10px;
+    grid-column-start : 1;
+    grid-column-end   : 3;
+    grid-row-start : 4;
+    grid-row-end   : 4;
+}
+
+#random_button
+{
+    width : 180px;
+    height : 80px;
+    margin-left : auto;
+    margin-right : auto;
+    grid-column-start : 1;
+    grid-column-end   : 3;
+    grid-row-start : 5;
+    grid-row-end   : 5;
 }
 
 button
 {
     background-color : #AA22CC;
-    border-style: dotted;
-    margin-left : auto;
-    margin-right : auto;
+    color : #BBFFBB;
+    border-style: solid;
     margin-top : 20px;
     margin-bottom : 20px;
-    display      : block;
+    font-weight: bold;
 }
 
 div
@@ -41,30 +88,15 @@ div
     text-align: center;
 }
 
-#play_button
-{
-    width : 80px;
-    height : 80px;
-    border-radius: 50%;
-    display : table-row;
-}
-
 .fill_button
 {
-    display : table-cell;
+    padding : 20px;
 }
 
 .draw_button
 {
-    display : table-cell;
-}
-
-.pen_button_div
-{
-    width : 100%;
-    display : table-row;
-    margin-left : auto;
-    margin-right : auto;
+    padding : 30px;
+    color : #000;
 }
 
 canvas
